5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1885_2217.log
== TEST (2019-07-09 11:19:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

a = zeros(shape(v), dtype=int)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:22:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

a = zeros(shape(2), dtype=float)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:24:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:24:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:26:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0

print(v[i][0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:26:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0

print(v[i:][0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:27:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0

print(v[j:][0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:27:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j= 0 

print(v[j:][0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:27:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0 

print(v[j:][1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:27:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0 

print(v[i:][1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:28:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0 

print(v[:j][0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:28:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

 

print(v[:i][0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:28:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0

print(v[:i][0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:28:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[i][0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:29:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[i][1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:29:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[i][0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:30:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[i][0])
print(v[i][5])
print(v[i][9])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:30:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[i][0])
print(v[j][0])
p
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:30:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[i][0])
print(v[j][0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:30:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[i][0])
print(v[j: ][0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[i][0])
print(v[ :j][0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[i])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

i = 0
j = 0

print(v[j])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:32:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0][i])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:32:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0][0])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:32:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:32:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[1])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:33:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[2])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:34:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[1])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:34:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v)

print(v[3])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:34:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v)

print(v[2])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:34:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v)

print(v[i])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:35:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v)

print(v[i:])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:35:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v)

print(v[i:])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:35:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v)

print(v(i:))


-- ERROR:
File "XXXX", line 8
    print(v(i:))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:35:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v)

print(v[1:])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:36:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v)

print(v[1]-v[2])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:39:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(sum(v))


for i in range(size(v)):
	if 




-- ERROR:
File "XXXX", line 10
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:39:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(sum(v))







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:39:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(size(v))







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:41:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[:0])







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:41:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0:])







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:41:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0:][1])







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:41:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0:i][1])







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:42:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0:1][1])







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:42:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0:1])







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:42:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[:1])







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:42:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0])







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:42:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[i:](0))







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:43:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print(v[0:](0))







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:43:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("digite a matriz: ")))

print







-- EXECUTION TIME:
0.989449
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:

-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:

-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
